<resources>
    <string name="app_name">ContactAppUZ</string>

    <!-- ContactRow -->
    <string name="contactRowFirstName">First name: </string>
    <string name="contactRowLastName">Last name: </string>
    <string name="contactRowAddress">Address: </string>
    <string name="contactRowBirth">Birth date: </string>
    <string name="contactRowDelete">Delete</string>
    <string name="contactRowUpdate">Update</string>
    <string name="contactRowGo">Go</string>


    <!-- Main -->
    <string name="mainTitle">Menu</string>
    <string name="mainSwitchLanguage">Switch language</string>
    <string name="mainGoToContactActivity">Go to ContactActivity</string>
    <string name="mainLogout" >Logout</string>
    <string name="mainStatistics">Statistics</string>

    <!-- AddContact -->
    <string name="addContactFirstNameHint">First name</string>
    <string name="addContactLastNameHint">Last name</string>
    <string name="addContactAddressHint">Address</string>
    <string name="addContactBirthDateHint">Birth date</string>
    <string name="addContactClearButton">Clear</string>
    <string name="addContactAcceptButton">Accept</string>
    <string name="addContactBackButton">Back</string>
    <string name="addContactContactImage">Photo</string>
    <string name="addContactImagePlaceholder">Add your photo</string>

    <!-- Contact -->
    <string name="contactFilter">Filter</string>
    <string name="contactAdd">Add</string>

    <!-- Login/Register -->
    <string name="loginRegisterUser">User</string>
    <string name="loginRegisterPassword">Password</string>
    <string name="loginRegisterSubmit">Submit</string>
    <string name="loginTittle">Login</string>
    <string name="loginSwitchToRegister">Register</string>
    <string name="registrationTittle">Registration</string>
    <string name="registerSwitchToLogin">Log in</string>
    <string name="loginRegisterConfirmPassword">Confirm password</string>
    <string name="passwordsDoNotMatch">The entered passwords do not match!</string>

    <!-- Statistics -->
    <string name="statisticsTitle">Statistics</string>
    <string name="statisticsTodaySteps">Today steps:</string>
    <string name="statisticsTotalSteps">Total steps:</string>
    <string name="statisticsExit">Exit</string>


</resources>